--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,6 @@
 body {
     margin: 0px;
+    height: 100vh;
 }
 
 .header {
@@ -17,12 +18,13 @@ body {
 .calendar {
     display: grid;
     background-color: burlywood;
-    padding: 20px;
+    padding: 5px;
+    width: auto;
 }
 
 .day-box {
     background-color: coral;
-    margin: 5px;
+    margin: 2px;
     height: 20px;
     width: 20px;
     border-radius: 3px;
