--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -9,10 +9,9 @@ body {
     width: 100%;
     text-align: center;
     padding : 10px;
-}
-
-.header span {
-    padding: 10px;
+    span {
+        padding: 10px;
+    }
 }
 
 .calendar {
@@ -28,8 +27,12 @@ body {
     height: 20px;
     width: 20px;
     border-radius: 3px;
+    .disabled {
+        background-color: dimgrey;
+    }
 }
 
-.day-box.disabled {
-    background-color: dimgrey;
+.hidden {
+    visibility: hidden;
+    height: 0px;
 }
