--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,24 +1,39 @@
+
+
 body {
     margin: 0px;
     height: 100vh;
 }
 
 .header {
-    display : inline-block;
+    display : flex;
     background-color: cadetblue;
-    width: 100%;
-    text-align: center;
-    padding : 10px;
-    span {
+    width: 100vw;
+    height: 7vh;
+    justify-content: space-between;
+    // text-align: center;
+    .year-buttons {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    button {
+        border: none;
+        background-color: transparent;
         padding: 10px;
+    }
+    .side-button {
+        padding-left: 20px;
+        padding-right: 20px;
     }
 }
 
 .calendar {
     display: grid;
     background-color: burlywood;
-    padding: 5px;
-    width: auto;
+    height: 93vh;
+    width: 100vw;
+    overflow: scroll;
 }
 
 .day-box {
@@ -35,4 +50,11 @@ body {
 .hidden {
     visibility: hidden;
     height: 0px;
+}
+
+.backdrop {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    backdrop-filter: blur(2px);
 }
