--- a/src/styles/Write.scss
+++ b/src/styles/Write.scss
@@ -1,4 +1,13 @@
 .write {
     z-index: 2;
+    height: 50%;
+    width: 50%;
+    padding: 20px;
     color: brown;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+
 }
