--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -41,6 +41,7 @@ body {
     height: 20px;
     width: 20px;
     border-radius: 3px;
+    border: 1px solid coral;
     .disabled {
         background-color: dimgrey;
     }
