--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -24,6 +24,13 @@ body {
     .side-button {
         padding-left: 20px;
         padding-right: 20px;
+        width: 20vw;
+    }
+    .menu-button {
+        text-align: left;
+    }
+    .profile-button {
+        text-align: right;
     }
 }
 
