db 구조(schema?) 정리 날짜별 key로 변경 firestore onSnapshot 적용

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -52,6 +52,7 @@ body {
     width: 20px;
     border-radius: 3px;
     border: 1px solid coral;
+    text-align: center;
     .disabled {
         background-color: dimgrey;
     }
