--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -1,12 +1,15 @@
+@import "Colors";
+
 .menu {
     padding: 20px;
-    background-color: white;
+    background-color: $primary-ui-color;
     height: 50%;
     width: 50%;
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    color: $primary-font-color;
 }
 
 dialog {
@@ -20,6 +23,7 @@ ul {
     li {
         :hover {
             font-weight: bold;
+            color: $accent-font-color;
         }
     }
 }
