--- a/src/styles/Auth.scss
+++ b/src/styles/Auth.scss
@@ -41,7 +41,7 @@ $button-width: calc(100% - 20px);
   .sign-up {
     background-color: transparent;
     border: none;
-    margin: 5px 0 5px 0;
+    margin: 5px 0;
     color: $accent-font-color;
     width: $button-width;
   }
