--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -15,6 +15,11 @@ button {
     background-color: $secondary-ui-color;
     color: $secondary-font-color;
     cursor: pointer;
+    font-family: 'Noto Sans KR', sans-serif;
+}
+
+textarea {
+    font-family: 'Noto Sans KR', sans-serif;
 }
 
 .header {
@@ -23,7 +28,8 @@ button {
     width: 100vw;
     height: 7vh;
     justify-content: space-between;
-    
+    align-items: center;
+    color: $secondary-font-color;
     .year-buttons {
         display: flex;
         align-items: center;
@@ -31,13 +37,12 @@ button {
     }
     button {
         border: none;
+        margin: 0;
         background-color: transparent;
         padding: 10px;
         color: $secondary-font-color;
     }
-    span {
-        color: $secondary-font-color;
-    }
+
     .side-button {
         padding-left: 20px;
         padding-right: 20px;
@@ -55,25 +60,31 @@ button {
 
 }
 
+.calendar-wrapper {
+    overflow-y: auto;
+}
 .calendar {
     display: grid;
     background-color: $primary-ui-color;
     height: 93vh;
-    width: 100vw;
-    overflow-y: auto;
+    width: fit-content;
+    margin: 0 auto;
 }
 
 .day-box {
+    display: flex;
     background-color: $secondary-ui-color;
     margin: 2px;
     height: 20px;
     width: 20px;
     border-radius: 3px;
     border: 1px solid $secondary-ui-color;
-    text-align: center;
     color: $primary-font-color;
+    font-size: 10px;
+    justify-content: center;
+    align-items: center;
     &.disabled {
-        background-color: $secondary-ui-color;
+        background-color: $accent-ui-color;
     }
 }
 
